--- a/test2.html
+++ b/test2.html
@@ -4,36 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        function clickButton()
+            {
+                let login = document.getElementById('login').value;
+                login = login.trim();
+                //Проверка на пустое значение
+                if (login === '')
+                    {
+                       alert('Введено пустое значение!');
+                       return;
+                    }
+                let password = document.getElementById('password').value;
+                password = password.trim();
+                //Проверка на пустое значение
+                if (password === '')
+                    {
+                       alert('Введено пустое значение!');
+                       return;
+                    }
+                //Проверка логина на специальные символы
+                if (IsSpecSymbInLogin(login) == true)
+                    {
+                        alert('Ваш логин не должен содержать специальные символы');
+                        return;
+                    }
+                if (!IsSpecSymbInPassw(password) || !IsDigInPassw(password))
+                    {
+                        alert('Ваш пароль должен содержать хотя бы одну цифру и один специальный символ');
+                        return;
+                    }
+                document.getElementById('login').value = '';
+                document.getElementById('password').value = '';
+                alert('Вы успешно зарегистрировались!');
+                return;
+            }
+            //Наличие специальных символов в логине
+            function IsSpecSymbInLogin(login)
+            {//Если спец символы окажутся в логине, то true, иначе false
+                    const banlist = [')', ')', '=', '-', '_', '%', '$', '#', '№', '!', '&', '?', '*'];
+                    for (let i = 0; i < login.length; i++)
+                        {
+                            if (banlist.includes(login[i]))
+                                {
+                                    return true;
+                                }
+                        }
+                        return false;
+                }
+            //Проверка на наличие специальных символов в пароле
+            function IsSpecSymbInPassw(password)
+                {//Если спец символы окажутся в пароле, то true, иначе false
+                    const Shlist = [')', ')', '=', '-', '_', '%', '$', '#', '№', '!', '&', '?', '*'];
+                    for (let i = 0; i < password.length; i++)
+                        {
+                            if (Shlist.includes([password][i]))
+                                {
+                                    return true;
+                                }
+                        }
+                        return false; 
+                }
+            //Проверка пароля на цифры
+            function IsDigInPassw(password)
+                {//Если есть цифры, то true, если нет - false
+                    const Nlist = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '0'];
+                    for (let n = 0; n<password.length; n++)
+                        {
+                            if (Nlist.includes(password[n]))
+                                {
+                                    return true;
+                                }
+                        }
+                        return false;
+                }
+    </script>
 </head>
 <body>
-    <h1>Перепись населения</h1>
-    <h4>Введите ваше имя и фамилию</h4>
-    <div>
-        <label>Имя:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>
-        <input type="text">
-    </div>
-    <div>
-        <label>Фамилия:</label>
-        <input type="text">
-    </div>
-    <div>
-        <h4>Введите вашу дату рождения</h4>
-        <label>Ваша дата рождения:</label>
-        <input type="date">
-    </div>
-    <div>
-        <h4>Укажите ваш пол</h4>
-        <input type="radio" name="pol"><label>Мужской</label>
-        <input type="radio" name="pol"><label>Женский</label>
-        <input type="radio" name="pol"><label>Другой</label>
-    </div>
-    <div>
-        <h1> </h1>
-    </div>
-    <div>
-        <button>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="color: black; text-decoration: none;">Подтвердить</a>
-        </button>
-    </div>
+        <div>
+            <h1>Регистрация на нашем сайте</h1>
+        </div>
+        <div>
+            <label>
+                Логин:&nbsp&nbsp
+            </label>
+            <input id="login" type="text">
+        </div>
+        <div>
+            <label>
+                Пароль:
+            </label>
+            <input  id="password" type="text">
+        </div>
+        <div> &nbsp</div>
+        <div>
+            <button onclick="clickButton()">Подтвердить</button>
+        </div>
 </body>
 </html>
